feat: add files for post interface
